<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/drawable_menu"
            android:title="@string/home" />
    </group>

    <item android:title="Profile">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/navigation_profile"
                    android:icon="@drawable/drawable_user_icon"
                    android:title="@string/profile" />
                <item
                    android:id="@+id/navigation_logout"
                    android:icon="@drawable/drawable_logout_icon"
                    android:title="@string/logout" />
            </group>
        </menu>
    </item>


    <item android:title="Share">
        <menu>

            <group android:checkableBehavior="none">
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/drawable_share_icon"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_rate_us"
                    android:icon="@drawable/drawable_rate_icon"
                    android:title="@string/rate_us" />
            </group>

        </menu>
    </item>

</menu>