<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card_view"
    android:layout_width="190dp"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:onClick="callJoinScreen"
    android:transitionName="transition_join_screen"
    app:cardCornerRadius="2dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:id="@+id/linear_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp">

        <ImageView
            android:id="@+id/featured_driver1"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/drawable_driver1" />

        <TextView
            android:id="@+id/featured_name1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:fontFamily="@font/baloo"
            android:text="@string/driver1"
            android:textColor="@color/color_accent"
            android:textSize="40sp" />

        <TextView
            android:id="@+id/lets_drive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/baloo"
            android:text="@string/lets_drive"
            android:textAllCaps="true"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/featured_desc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/desc1"
            android:textSize="20sp" />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_gravity="end"
            android:src="@drawable/drawable_information" />

    </LinearLayout>

</androidx.cardview.widget.CardView>