<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="30dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/profile_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="callMenu"
            android:padding="5dp"
            android:src="@drawable/drawable_back_button"
            android:transitionName="transition_back_btn" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/prifile_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/muli_black"
                android:text="@string/profile"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:transitionName="transition_profile_text" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/profile_icon"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:src="@drawable/profile_user" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/profile_name_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo"
                android:text="@string/full_name"
                android:textColor="@color/color_accent"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/profile_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/muli"
                android:text="@string/full_name"
                android:textColor="@color/color_accent"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/profile_username_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo"
                android:text="@string/field_username"
                android:textColor="@color/color_accent"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/profile_user_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/muli"
                android:text="@string/field_username"
                android:textColor="@color/color_accent"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/profile_email_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo"
                android:text="@string/enter_email"
                android:textColor="@color/color_accent"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/profile_user_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/muli"
                android:text="@string/enter_email"
                android:textColor="@color/color_accent"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/profile_city_tittle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/baloo"
                android:text="@string/enter_city"
                android:textColor="@color/color_accent"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/profile_user_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:fontFamily="@font/muli"
                android:text="@string/enter_city"
                android:textColor="@color/color_accent"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</ScrollView>